--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ramda": "^0.29.0",
     "tsx": "^3.12.7",
@@ -21,6 +22,7 @@
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/ramda": "^0.29.3"
   }
