--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "bin": "dist/index.mjs",
   "access": "public",
   "scripts": {
-    "start": "tsx src/index.mts",
-    "build": "tsc"
+    "start": "ts-node src/index.mts",
+    "typecheck": "tsc --noEmit",
+    "build": "swc src -d dist"
   },
   "author": {
     "name": "Aapeli Haanpuu",
@@ -18,13 +19,32 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ramda": "^0.29.0",
-    "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.85",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/ramda": "^0.29.3"
+    "@types/ramda": "^0.29.3",
+    "@types/yargs": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run eslint:fix --",
+      "npm run prettier:fix --"
+    ],
+    "*.{json,md}": [
+      "npm run prettier:fix --"
+    ]
   }
 }
