--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "strict": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "isolatedModules": true,
+    "importsNotUsedAsValues": "error",
+    "esModuleInterop": true,
+    "verbatimModuleSyntax": true
+  },
+  "ts-node": {
+    "swc": true
   }
 }
