--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.0",
   "description": "😈",
   "main": "src/index.mts",
-  "bin": "dist/index.mjs",
+  "bin": {
+    "hack3r-server": "dist/index.js"
+  },
   "access": "public",
   "scripts": {
     "start": "ts-node src/index.mts",
