--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "hack3r-server": "dist/index.js"
   },
   "access": "public",
+  "type": "module",
   "scripts": {
     "start": "ts-node src/index.mts",
     "typecheck": "tsc --noEmit",
@@ -21,24 +22,28 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ramda": "^0.29.0",
-    "typescript": "^5.1.6",
-    "yargs": "^17.6.2"
+    "yargs": "^17.6.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.85",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/ramda": "^0.29.3",
-    "@types/yargs": "^17.0.24",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1"
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.78",
+    "@swc/helpers": "0.5.2",
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.17",
+    "@types/node": "20.6.3",
+    "@types/ramda": "0.29.3",
+    "@types/yargs": "17.0.24",
+    "@typescript-eslint/eslint-plugin": "6.7.0",
+    "@typescript-eslint/parser": "6.7.0",
+    "eslint": "8.49.0",
+    "eslint-config-prettier": "9.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "14.0.1",
+    "prettier": "3.0.3",
+    "regenerator-runtime": "0.14.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.6"
   },
   "lint-staged": {
     "*.ts": [
