--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@ngrok/ngrok": "^0.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ramda": "^0.29.0",
