--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "hack3r-server": "dist/index.js"
   },
   "access": "public",
-  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.mts",
+    "start": "ts-node src/index.ts",
     "typecheck": "tsc --noEmit",
-    "build": "swc src -d dist"
+    "build": "tsc"
   },
   "author": {
     "name": "Aapeli Haanpuu",
@@ -27,9 +26,6 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.78",
-    "@swc/helpers": "0.5.2",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/node": "20.6.3",
