--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm run build
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
+      - name: Create Release 
+        uses: ncipollo/release-action@v1.13.0
         with:
-          name: dist
-          path: dist
+          artifacts: dist
