--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Create Release 
         uses: ncipollo/release-action@v1.13.0
         with:
-          artifacts: dist
+          artifacts: 'dist/*'
