--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "@aapzu/hack3r-server",
   "version": "1.2.5",
   "description": "😈",
-  "main": "src/index.mts",
-  "bin": {
-    "hack3r-server": "dist/index.js"
-  },
-  "access": "public",
+  "main": "dist/index.js",
+  "bin": "dist/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
     "typecheck": "tsc --noEmit",
@@ -16,39 +13,43 @@
     "name": "Aapeli Haanpuu",
     "email": "aapzu@iki.fi"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@ngrok/ngrok": "^0.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "ramda": "^0.29.0",
-    "yargs": "^17.6.2",
-    "zod": "^3.22.2"
+    "express": "^4.19.2",
+    "ramda": "^0.29.1",
+    "yargs": "^17.7.2",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
-    "@types/cors": "2.8.13",
-    "@types/express": "4.17.17",
-    "@types/node": "20.6.3",
-    "@types/ramda": "0.29.3",
-    "@types/yargs": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "6.7.0",
-    "eslint": "8.49.0",
-    "eslint-config-prettier": "9.0.0",
-    "husky": "8.0.3",
-    "lint-staged": "14.0.1",
-    "prettier": "3.0.3",
-    "regenerator-runtime": "0.14.0",
-    "ts-node": "10.9.1",
-    "typescript": "5.1.6"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.10",
+    "@types/ramda": "^0.30.0",
+    "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "regenerator-runtime": "^0.14.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "lint-staged": {
     "*.ts": [
-      "npm run eslint:fix --",
-      "npm run prettier:fix --"
+      "pnpm run eslint:fix --",
+      "pnpm run prettier:fix --"
     ],
     "*.{json,md}": [
-      "npm run prettier:fix --"
+      "pnpm run prettier:fix --"
     ]
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
