--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "tsx src/index.mts",
     "typecheck": "tsc --noEmit",
-    "build": "tsc"
+    "build": "tsup"
   },
   "author": {
     "name": "Aapeli Haanpuu",
@@ -36,7 +36,8 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "regenerator-runtime": "^0.14.1",
-    "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
+    "tsx": "^4.9.3",
     "typescript": "^5.4.5"
   },
   "lint-staged": {
@@ -48,6 +49,7 @@
       "pnpm run prettier:fix --"
     ]
   },
+  "type": "module",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
