--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "ramda": "^0.29.1",
+    "typescript-eslint": "^7.8.0",
     "yargs": "^17.7.2",
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.10",
     "@types/ramda": "^0.30.0",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
