--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
-    "start": "tsx src/index.mts",
+    "start": "tsx src/index.ts",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "build": "tsup"
@@ -16,31 +16,31 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ngrok/ngrok": "^0.6.0",
+    "@ngrok/ngrok": "^1.5.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "ramda": "^0.29.1",
-    "typescript-eslint": "^7.8.0",
+    "express": "^5.1.0",
+    "ramda": "^0.31.3",
     "yargs": "^17.7.2",
-    "zod": "^3.23.6"
+    "zod": "^3.25.75"
   },
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.10",
-    "@types/ramda": "^0.30.0",
-    "@types/yargs": "^17.0.32",
-    "eslint": "^9.2.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "@eslint/js": "^9.30.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^22.11.0",
+    "@types/ramda": "^0.30.2",
+    "@types/yargs": "^17.0.33",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2",
     "regenerator-runtime": "^0.14.1",
-    "tsup": "^8.0.2",
-    "tsx": "^4.9.3",
-    "typescript": "^5.4.5"
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1"
   },
   "lint-staged": {
     "*.ts": [
