--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@ngrok/ngrok": "^1.5.1",
+    "@swc/core": "^1.12.9",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "ramda": "^0.31.3",
