--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "dist/index.js",
   "scripts": {
     "start": "tsx src/index.ts",
-    "lint": "eslint .",
+    "lint": "biome check",
     "typecheck": "tsc --noEmit",
     "build": "tsup"
   },
@@ -25,31 +25,22 @@
     "zod": "^3.25.75"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
+    "@biomejs/biome": "^2.0.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^22.11.0",
     "@types/ramda": "^0.30.2",
     "@types/yargs": "^17.0.33",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "prettier": "^3.6.2",
     "regenerator-runtime": "^0.14.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1"
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
-    "*.ts": [
-      "pnpm run eslint:fix --",
-      "pnpm run prettier:fix --"
-    ],
-    "*.{json,md}": [
-      "pnpm run prettier:fix --"
+    "*": [
+      "pnpm run lint"
     ]
   },
   "type": "module",
